# ascii-empire

./: CMakeLists.txt  Empire_B.cpp  Empire_B.h  Empire_D.cpp  Empire_D.h  Empire_G.cpp  Empire_G.h  Empire_R.cpp  Empire_R.h  Empire_W.cpp  Empire_W.h  Objects.h  README.md  compiler.sh  main.cpp  main.h
include/: Empire_Client.h  Empire_Server.h  Extra.h
src/ai/Alpha/: Alpha_AI.cpp  CMakeLists.txt
src/ai/Beta/: Beta_AI.cpp  CMakeLists.txt
src/core/: Empire.cpp  Extra.cpp
src/simulator/: main.cpp
